--- a/public/css/style.css
+++ b/public/css/style.css
@@ -345,7 +345,7 @@ table.aligncenter .col {
 
 #startMenuUl .active {
 	color: #005a9e!important;
-	transform: scale(1.05);
+	transform: scaleX(1.05);
 	background-color: rgba(0,0,0,0.2)!important;
 	font-weight: bold;
 	filter: brightness(2);
@@ -389,7 +389,7 @@ table.aligncenter .col {
 #startMenu li a:hover {
 	color: orange!important;
 	background-color: rgba(0,0,0,0.3)!important;
-	transform: scale(1.05);
+	transform: scaleX(1.05);
 }
 
 #contingutStart {
@@ -446,6 +446,7 @@ table.aligncenter .col {
 
 #playMultiplayerCard {
 	padding-left: 0px;
+	overflow: hidden;
 }
 
 #playMultiplayerCard a {
@@ -456,6 +457,14 @@ table.aligncenter .col {
 	background-color: rgba(255,255,255,0.1);
 
 	text-decoration: none;
+}
+
+#playMultiplayerCard:hover p {
+	transform: scale(1.3);
+}
+
+#playMultiplayerCard:hover a {
+	box-shadow: inset 1px 1px 20px rgba(255,255,255,0.7);
 }
 
 #playMultiplayerCard img {
