--- a/public/css/style.css
+++ b/public/css/style.css
@@ -437,7 +437,7 @@ table.aligncenter .col {
 }
 
 #multiplayerLobby {
-	z-index: 2;
+	
 }
 
 #multiplayerContainer h3, #multiplayerLobby h3 {
@@ -555,8 +555,6 @@ input[type=password] {
 	display: table;
 
 	min-height: 400px;
-
-	z-index: 1;
 }
 
 .backgroundRotate img {
@@ -681,10 +679,21 @@ input[type=password] {
 
 .carousel-inner {
 	min-height: 300px;
+	position: relative;
 }
 
 #tipusPartidaSlider {
 	background-color: rgba(0,180,255,0.7);
+}
+
+.carousel-item, .carouselVertical {
+	height: 100%;
+}
+
+.carouselVertical {
+	width: 100%;
+	height: 100%;
+	display: table;
 }
 
 .ontopCarousel {
@@ -693,6 +702,13 @@ input[type=password] {
 	text-align: center;
 
 	color: white;
+
+	display: table-cell;
+	vertical-align: middle;
+
+	font-size: 25px;
+	text-transform: uppercase;
+	padding: 0px 30px;
 }
 
 #playerList {
@@ -725,8 +741,9 @@ input[type=password] {
 	
 }
 
-#playerList ul li a:hover {
-	background-color: rgba(255,255,255,0.1);
+#playerList ul li:hover {
+	color: orange!important;
+	filter: brightness(1.1);
 }
 
 #playerList ul li:nth-child(2) a {
@@ -779,6 +796,7 @@ input[type=password] {
 
 .playPartidaCard:hover p {
 	transform: scale(1.3);
+	padding: 0px 40px;
 }
 
 .playPartidaCard a p {
@@ -1097,6 +1115,10 @@ input[type=password] {
 
 /* MODAL INICIAR SESSIÓ PARTIDA */
 
+.modal-backdrop {
+	
+}
+
 #jugadorSeleccionatLabelFill {
 	font-weight: bold;
 }
@@ -1136,6 +1158,23 @@ input[type=password] {
 
 /* MODAL INICIAR SESSIÓ PARTIDA END */
 
+/* CANVI MODE MODAL */
+
+#canviModeTitle {
+	color: black!important;
+	text-align: center;
+}
+
+#canviModeAccept, #canviModeDeny {
+	width: 75px;
+}
+
+#acceptdenyModel {
+	text-align: center;
+}
+
+/* CANVI MODE MODAL END */
+
 .fos_user_profile_edit input:read-only {
 	background: #E5E5E5;
 }
@@ -1155,7 +1194,12 @@ input[type=password] {
 
 /* RESPONSIVE MEDIA QUERIES */
 
-@media screen and (max-width: 1270px) {
+@media screen and (max-width: 1280px) {
+
+	#multiplayerLobby {
+		margin-right: 0px!important;
+		padding-right: 0px!important;
+	}
 
 	#multiplayerLobby, #multiplayerContainer {
 		width: 100%!important;
@@ -1163,12 +1207,43 @@ input[type=password] {
 		flex: none;
 	}
 
+	.backgroundRotate {
+		top: 0;
+		right: 0;
+		display: none;
+	}
+
+	#multiplayerLobby > .container {
+		padding: 0px!important;
+	}
 
 }
 
-@media screen and (max-width: 1070px) {
+@media screen and (max-width: 1030px) {
 
-	
+	#tipusPartidaSlider, #playerList, #containerNormes, #containerComençarPartida {
+		flex: none!important;
+		width: 100%!important;
+		max-width: none!important;
+		padding-left: 0px!important;
+		padding-right: 0px!important;
+	}
+
+	.tableNormes {
+		max-width: none!important;
+	}
+
+	#containerNormesStart {
+		margin: 0px!important;
+	}
+
+	#tipusPartidaSlider {
+		height: 220px;
+	}
+
+	#titleMultijugador, #grupMultijugador {
+		text-align: center;
+	}
 
 }
 
